update image name

--- a/marvel/index.html
+++ b/marvel/index.html
@@ -112,7 +112,7 @@
                         Pepper Potts is also high due to the actress portraying the characters and her disputes with the company. 
                         Finally, Gamora & Star-Lord end up being higher due to their importance in the cosmic set up of the Marvel Universe, which is also important to the mythology.
                     <br><br><br>
-                <img src="img/legend_scatter.JPG" width="300" height="100">
+                <img src="img/legend_scatter.jpg" width="300" height="100">
                     </p>
             </section>
             <section class="step">
