--- a/marvel/index.html
+++ b/marvel/index.html
@@ -14,9 +14,9 @@
     <script src = 'd3.js'></script>
     <script src = 'https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js'></script>
 
-    <meta property='og:title' content='Best College Majors'/>
-    <meta property='og:description' content='This interactive, scrollable data visualisation will take you on a journey through all of the different college majors in the United States, and compare how they stack up in terms of median graduate salary, gender ratios, employability, and other factors. '/>
-    <meta property='og:url' content='https://cuthchow.github.io/college-majors-visualisation/'/>
+    <meta property='og:title' content='Most Important Marvel Movie Characters'/>
+    <meta property='og:description' content='This interactive, scrollable data visualisation  analyzing the most important Marvel Cinematic Universe characters'/>
+    <meta property='og:url' content=''/>
 
 
     <title>Best College Majors</title>
