--- a/marvel/index.html
+++ b/marvel/index.html
@@ -18,8 +18,7 @@
     <meta property='og:description' content='This interactive, scrollable data visualisation  analyzing the most important Marvel Cinematic Universe characters'/>
     <meta property='og:url' content=''/>
 
-
-    <title>Best College Majors</title>
+    <title>Most Important Marvel Cinematic Universe Characters</title>
 </head>
 
 
